--- a/app/styles/clases-privadas.css
+++ b/app/styles/clases-privadas.css
@@ -41,6 +41,7 @@ body {
   justify-content: center;
   text-align: center;
   overflow: hidden;
+  opacity: 1;
 }
 
 .hero-image {
@@ -106,6 +107,7 @@ body {
   background-color: var(--accent);
   padding: 5rem 1.5rem;
   text-align: center;
+  opacity: 1;
 }
 
 .class-info-title {
@@ -338,6 +340,16 @@ body {
 
 .contact-button i {
   margin-right: 0.5rem;
+}
+
+
+
+.benefits{
+  opacity: 1;
+}
+
+.other-disciplines{
+  opacity: 1;
 }
 
 @keyframes fadeIn {
